# JumboShoo

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
jumboshoo/: __main__.py  clidisplay.py  statemachine.py  thump.py  utils.py
jumboshoo/proximity/: __init__.py  classification.py  closerange_detection.py  longrange_detection.py
service/: jumboshoo.service
