[tool.poetry]
name = "jumboshoo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
adafruit-circuitpython-ads1x15 = "^2.2.25"
adafruit-blinka = "^8.39.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
